// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BranchTimeline > matches snapshot for empty state 1`] = `
<div>
  <div
    class="text-xs text-muted-foreground"
  >
    No branch timeline events recorded.
  </div>
</div>
`;

exports[`BranchTimeline > matches snapshot for selected-only with no matching branch 1`] = `
<div>
  <div
    class="space-y-3"
  >
    <div
      class="flex items-center justify-between gap-2 text-xs text-muted-foreground"
    >
      <span
        class="flex items-center gap-2"
      >
        <svg
          class="lucide lucide-git-branch h-3.5 w-3.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="6"
            x2="6"
            y1="3"
            y2="15"
          />
          <circle
            cx="18"
            cy="6"
            r="3"
          />
          <circle
            cx="6"
            cy="18"
            r="3"
          />
          <path
            d="M18 9a9 9 0 0 1-9 9"
          />
        </svg>
        Branch candidates
      </span>
      <span
        class="text-xs font-semibold text-emerald-700"
      >
        Selected: 
        tool.success
      </span>
    </div>
    <div
      class="text-xs text-muted-foreground"
    >
      No events for the selected branch.
    </div>
    <div
      class="space-y-2"
    />
  </div>
</div>
`;

exports[`BranchTimeline > matches snapshot with branch events and selected branch 1`] = `
<div>
  <div
    class="space-y-3"
  >
    <div
      class="flex items-center justify-between gap-2 text-xs text-muted-foreground"
    >
      <span
        class="flex items-center gap-2"
      >
        <svg
          class="lucide lucide-git-branch h-3.5 w-3.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="6"
            x2="6"
            y1="3"
            y2="15"
          />
          <circle
            cx="18"
            cy="6"
            r="3"
          />
          <circle
            cx="6"
            cy="18"
            r="3"
          />
          <path
            d="M18 9a9 9 0 0 1-9 9"
          />
        </svg>
        Branch candidates
      </span>
      <span
        class="text-xs font-semibold text-emerald-700"
      >
        Selected: 
        tool.success
      </span>
    </div>
    <div
      class="flex flex-wrap gap-2"
    >
      <div
        class="rounded-full border px-3 py-1 text-[11px] font-medium border-border text-muted-foreground"
      >
        #
        0
         
        tool.fail
      </div>
      <div
        class="rounded-full border px-3 py-1 text-[11px] font-medium border-emerald-300 bg-emerald-50 text-emerald-700"
      >
        #
        1
         
        tool.success
      </div>
    </div>
    <div
      class="space-y-2"
    >
      <div
        class="rounded-md border px-3 py-2 text-xs border-border"
      >
        <div
          class="flex items-start justify-between gap-3"
        >
          <div
            class="space-y-1"
          >
            <div
              class="flex items-center gap-2"
            >
              <svg
                class="lucide lucide-clock h-4 w-4 text-blue-600"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <polyline
                  points="12 6 12 12 16 14"
                />
              </svg>
              <span
                class="font-semibold"
              >
                Started
              </span>
              <span
                class="rounded-full bg-muted px-2 py-0.5 text-[10px]"
              >
                rank 
                0
              </span>
            </div>
            <div
              class="text-muted-foreground"
            >
              Tool: tool.fail
               • Step: step-1
            </div>
          </div>
        </div>
      </div>
      <div
        class="rounded-md border px-3 py-2 text-xs border-border"
      >
        <div
          class="flex items-start justify-between gap-3"
        >
          <div
            class="space-y-1"
          >
            <div
              class="flex items-center gap-2"
            >
              <svg
                class="lucide lucide-xcircle h-4 w-4 text-red-600"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <path
                  d="m15 9-6 6"
                />
                <path
                  d="m9 9 6 6"
                />
              </svg>
              <span
                class="font-semibold"
              >
                Failed
              </span>
              <span
                class="rounded-full bg-muted px-2 py-0.5 text-[10px]"
              >
                rank 
                0
              </span>
            </div>
            <div
              class="text-muted-foreground"
            >
              Tool: tool.fail
               • Step: step-1
            </div>
          </div>
        </div>
        <div
          class="mt-2 flex items-start gap-2 rounded bg-red-50 p-2 text-[11px] text-red-700"
        >
          <svg
            class="lucide lucide-alert-circle h-3.5 w-3.5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <line
              x1="12"
              x2="12"
              y1="8"
              y2="12"
            />
            <line
              x1="12"
              x2="12.01"
              y1="16"
              y2="16"
            />
          </svg>
          <span
            class="whitespace-pre-wrap"
          >
            forced failure
          </span>
        </div>
      </div>
      <div
        class="rounded-md border px-3 py-2 text-xs border-emerald-200 bg-emerald-50/40"
      >
        <div
          class="flex items-start justify-between gap-3"
        >
          <div
            class="space-y-1"
          >
            <div
              class="flex items-center gap-2"
            >
              <svg
                class="lucide lucide-check-circle h-4 w-4 text-emerald-600"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M22 11.08V12a10 10 0 1 1-5.93-9.14"
                />
                <path
                  d="m9 11 3 3L22 4"
                />
              </svg>
              <span
                class="font-semibold"
              >
                Succeeded
              </span>
              <span
                class="rounded-full bg-muted px-2 py-0.5 text-[10px]"
              >
                rank 
                1
              </span>
            </div>
            <div
              class="text-muted-foreground"
            >
              Tool: tool.success
               • Step: step-2
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
